build: fix build to install bundler

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -13,6 +13,8 @@ jobs:
       - uses: actions/setup-ruby@v1
         with:
           ruby-version: ${{ env.RUBY_VERSION }}
+      - name: Install bundler
+        run: gem install bundler
       - name: Install gems
         run: bundle
       - name: Check code
