build: cat log on failure
Former-commit-id: 83c2f0d686067e25c01889339edab5c7acd237ba

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -21,4 +21,4 @@ jobs:
         run: bundle exec rake features
       - name: Cucumber failed
         if: ${{ failure() }}
-        run: tmp/openhab/runtime/bin/client -p habopen 'system:version'
+        run: cat userdata/logs/openhab.log
