--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -21,4 +21,4 @@ jobs:
         run: bundle exec rake features
       - name: Cucumber failed
         if: ${{ failure() }}
-        run: cat userdata/logs/openhab.log
+        run: cat tmp/openhab/userdata/logs/openhab.log
