--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -13,6 +13,10 @@ jobs:
       - uses: actions/setup-ruby@v1
         with:
           ruby-version: ${{ env.RUBY_VERSION }}
+      - uses: actions/setup-java@v1
+        with:
+          java-version: '11.0.8' 
+          java-package: jre
       - name: Install bundler
         run: gem install bundler
       - name: Install gems
