test: Starting work to execute cucumber test in parallel
Former-commit-id: f9cadfbf3dce53403c0c21ce6d9a8e15f8602215

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -16,13 +16,13 @@ jobs:
          ruby-version: ${{ env.RUBY_VERSION }}
      - id: set-matrix
        run: |
-         JSON = ruby -e '
+         JSON=$(ruby -e '
            require "json"
            feature_maps = Dir["features/**/*.feature"].map { |feature| { feature: File.basename(feature,".feature"), file: feature } } 
            include_map = {}
            include_map["include"]= feature_maps
            puts include_map.to_json
-         ' 
+         ') 
          echo $JSON
          echo "::set-output name=matrix::$( echo "$JSON")"
 
