test: Starting work to execute cucumber test in parallel
Former-commit-id: 19f300582f6b2ac13d5f3ba8a308682decf4b8d1

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -29,6 +29,7 @@ jobs:
  cucumber:
     needs: cucumber-matrix
     runs-on: ubuntu-18.04
+    continue-on-error: true
     strategy:
       matrix:  ${{fromJson(needs.cucumber-matrix.outputs.matrix)}}
     steps:
