--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -23,7 +23,7 @@ jobs:
        uses: actions/cache@v2
        with: 
         path: tmp/
-        key: OpenHAB-setup-${{ GITHUB_WORKFLOW }}-${{ GITHUB_RUN_NUMBER }}
+        key: OpenHAB-setup-${GITHUB_WORKFLOW}-${GITHUB_RUN_NUMBER}
      - name: Execute Cucumber
        run: bundle exec rake openhab:setup
  
@@ -71,7 +71,7 @@ jobs:
         uses: actions/cache@v2
         with: 
           path: tmp/
-          key: OpenHAB-setup-${{ GITHUB_WORKFLOW }}-${{ GITHUB_RUN_NUMBER }}
+          key: OpenHAB-setup-${GITHUB_WORKFLOW}-${GITHUB_RUN_NUMBER}
       - name: Execute Cucumber
         run: bundle exec rake features[${{ matrix.file }}]
       - name: Cat log
