--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -18,13 +18,15 @@ jobs:
          java-package: jre
      - name: Install bundler
        run: gem install bundler
-     - name: Cache OpenHAB setup
+     - name: Cache Gems 
        uses: actions/cache@v2
        with: 
-        path: tmp/
-        key: OpenHAB-setup-${GITHUB_WORKFLOW}-${GITHUB_RUN_NUMBER}
+        path: vendor/bundle
+        key: gems-${{ hashFiles('**/Gemfile.lock') }}
      - name: Install gems
-       run: bundle
+       run: |
+          bundle config path vendor/bundle
+          bundle install --jobs 4 --retry 3
      - name: Cache OpenHAB setup
        uses: actions/cache@v2
        with: 
@@ -71,6 +73,15 @@ jobs:
           java-package: jre
       - name: Install bundler
         run: gem install bundler
+      - name: Restore Gems 
+        uses: actions/cache@v2
+        with: 
+          path: vendor/bundle
+          key: gems-${{ hashFiles('**/Gemfile.lock') }}
+      - name: Install gems
+        run: |
+          bundle config path vendor/bundle
+          bundle install --jobs 4 --retry 3
       - name: Install gems
         run: bundle
       - name: Restore OpenHAB setup
