--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -3,7 +3,7 @@ env:
   RUBY_VERSION: 2.5
 
 name: Openhab Scripting Tests
-on: [push,pull_request]
+on: [pull_request]
 jobs:
  openhab-setup:
    runs-on: ubuntu-18.04
