--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -5,6 +5,25 @@ env:
 name: Openhab Scripting Tests
 on: [pull_request]
 jobs:
+
+ rubocop:
+   runs-on: ubuntu-18.04
+   continue-on-error: true
+   steps:
+     - uses: actions/checkout@v1
+     - uses: actions/setup-ruby@v1
+       with:
+         ruby-version: ${{ env.RUBY_VERSION }}
+     - name: Install bundler
+       run: gem install bundler
+     - name: Install gems
+       run: |
+          bundle config path vendor/bundle
+          bundle install --jobs 4 --retry 3
+     - name: Rubocop 
+       run: bundle exec rubocop
+ 
+
  openhab-setup:
    runs-on: ubuntu-18.04
    steps:
