build: Capture all openhab logs on failure

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -114,4 +114,7 @@ jobs:
         if: failure()
         with:
           name: OpenHAB-logs-${{ github.workflow }}-${{ github.run_number }}
-          path: tmp/cucumber_logs
+          path: |
+            tmp/cucumber_logs
+            tmp/openhab/userdata/logs
+          retention-days: 2
