--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -108,7 +108,8 @@ jobs:
           key: OpenHAB-setup-${{ github.workflow }}-${{ github.run_number }}
       - name: Cucumber
         #run: bundle exec rake features[${{ matrix.file }}]
-        run: bundle exec rake features
+        #run: bundle exec rake features
+        run: bundle exec rake features[features/delay.feature]
       - name: Upload OpenHAB Logs
         uses: actions/upload-artifact@v2
         if: failure()
