--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -112,6 +112,7 @@ jobs:
       - name: Check params
         #run: bundle exec rake features[${{ matrix.file }}]
         run: ps -ef | grep java
+        if: always()
       - name: Upload OpenHAB Logs
         uses: actions/upload-artifact@v2
         if: failure()
