--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -123,6 +123,12 @@ jobs:
         shell: 'script -q -e -c "bash {0}"'
         run: ${{ github.workspace }}/tmp/openhab/runtime/bin/client -p habopen 'dev:dump-create'
         if: failure()
+      - name: Wait for dump to complete
+        run: |
+          ls -ltrah tmp/openhab/userdata/*.zip
+          sleep 60
+          ls -ltrah tmp/openhab/userdata/*.zip
+        if: failure()
       - name: Upload OpenHAB Logs
         uses: actions/upload-artifact@v2
         if: failure()
