--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -107,12 +107,6 @@ jobs:
           key: OpenHAB-setup-${{ github.workflow }}-${{ github.run_number }}
       - name: Cucumber
         run: bundle exec rake features[${{ matrix.file }}]
-      - name: Cat output log
-        run: cat tmp/karaf.log
-        if: failure()
-      - name: Cat the current test files
-        run: cat tmp/openhab/conf/automation/jsr223/ruby/personal/*.rb
-        if: failure()
       - name: Generate OpenHAB Dump
         run: bundle exec rake openhab:dump
         if: failure()
@@ -126,4 +120,5 @@ jobs:
             tmp/karaf.log
             tmp/openhab/userdata/logs
             tmp/openhab/userdata/*.zip
+            tmp/openhab/conf/automation/jsr223/ruby/personal/
           retention-days: 2
