--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -46,7 +46,7 @@ jobs:
      - name: Install gems
        run: |
           bundle config path vendor/bundle
-          bundle install --jobs 4 --retry 
+          bundle install --jobs 4 --retry 3
      - name: Rubocop 
        run: bundle exec rubocop
  
