--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -171,11 +171,11 @@ jobs:
      - name: Current Version 
        id: current_version
        run: echo "::set-output name=version::$( bundle exec rake version )" 
-     - name: Get Previous tag
-       id: previous_tag
-       uses: "WyriHaximus/github-action-get-previous-tag@v1"
+     - name: Current tag
+       id: current_tag
+       run: echo ::set-output name=tag::${GITHUB_REF#refs/*/}
      - name: Execute Release
-       if:  ${{ steps.previous_tag.outputs.tag != steps.current_version.version}}
+       if:  ${{ steps.current_tag.outputs.tag != steps.current_version.version}}
        run: echo "New version detected, preparing release"
 
 
