--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -171,13 +171,13 @@ jobs:
      - name: Current Version 
        id: current_version
        run: echo "::set-output name=version::$( bundle exec rake version )" 
-     - name: Current tag
-       id: current_tag
-       run: echo ::set-output name=tag::${GITHUB_REF#refs/*/}
+     - name: Current Release
+       id: latest_release
+       uses: thebritican/fetch-latest-release@v1
      - name: Execute Release
-       if:  ${{ steps.current_tag.outputs.tag != steps.current_version.version}}
+       if:  ${{ steps.current_tag.outputs.tag != steps.latest_release.tag_name}}
        run: |
-          echo "Current Version ${{ steps.current_version.version }}" 
+          echo "Current Release ${{ steps.latest_release.tag_name }}" 
           echo "Current Tag ${{ steps.current_tag.outputs.tag }}" 
           echo "New version detected, preparing release"
 
