Build: WIP on creating releases - use github refs for current tag

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -173,7 +173,7 @@ jobs:
        run: echo "::set-output name=version::$( bundle exec rake version )" 
      - name: Current Release
        id: latest_release
-       uses: thebritican/fetch-latest-release@v2
+       uses: thebritican/fetch-latest-release
      - name: Execute Release
        if:  ${{ steps.current_tag.outputs.tag != steps.latest_release.tag_name}}
        run: |
