--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -171,9 +171,9 @@ jobs:
      - name: Current Version 
        id: current_version
        run: echo "::set-output name=version::$( bundle exec rake version )" 
-     - name: Current Release
+     - name: Gets latest created release info
        id: latest_release
-       uses: thebritican/fetch-latest-release@v2.0.0
+       uses: jossef/action-latest-release-info@v1.1.0
      - name: Execute Release
        if:  ${{ steps.current_tag.outputs.tag != steps.latest_release.tag_name}}
        run: |
