--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -184,11 +184,11 @@ jobs:
           TAG_NAME=$(git tag | tail -1)
           echo "::set-output name=tag_name::$( echo "$TAG_NAME" )"
      - name: Execute Release
-       #if:  ${{ steps.current_tag.outputs.tag != steps.latest_release.tag_name}}
+       if:  ${{ steps.current_version.outputs.version != steps.latest_release.outputs.tag_name}}
        run: |
+          echo "New version detected, preparing release"
           echo "Current Tag: ${{ steps.latest_release.outputs.tag_name }}" 
           echo "Current Version: ${{ steps.current_version.outputs.version }}" 
           echo "${{ steps.current_version.outputs.version != steps.latest_release.outputs.tag_name}}"
-          echo "New version detected, preparing release"
 
 
