--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,10 +1,10 @@
 name: Openhab JRuby Scripting
 
 on: 
-  - pull_request
-  - push:
-      branches:
-        - main
+  pull_request
+  push:
+    branches:
+      - main
 
 env:
   RUBY_VERSION: 2.5
