Docs: Set remote theme for GitHub
Former-commit-id: ce9dcfabf9e61eab6bd94bea9d0524200187a6c7

--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,8 @@ theme: just-the-docs
 plugins:
   - jekyll-feed
 
+remote_theme: pmarsceill/just-the-docs
+
 
 # Regression tests
 # By default, the pages in /docs/tests are excluded when the ste is built.
