--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -57,6 +57,30 @@ jobs:
      - name: Cucumber Lint 
        run: bundle exec cuke_linter
  
+   yard-coverage:
+   runs-on: ubuntu-18.04
+   continue-on-error: true
+   steps:
+     - uses: actions/checkout@v2
+     - uses: actions/setup-ruby@v1
+       with:
+         ruby-version: ${{ env.RUBY_VERSION }}
+     - name: Install bundler
+       run: gem install bundler -N       
+     - name: Gem Cache
+       uses: actions/cache@v2
+       with: 
+        path: vendor/bundle
+        key: gems-${{ hashFiles('**/Gemfile.lock') }}
+     - name: Install gems
+       run: |
+          bundle config path vendor/bundle
+          bundle install --jobs 4 --retry 3
+     - name: Yard Coverage
+       run: |
+            bundle exec yard stats --list-undoc
+            bundle exec yard stats | grep "100.00% documented"
+
 
  openhab-setup:
    runs-on: ubuntu-18.04
