--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -200,6 +200,9 @@ jobs:
        run: |
           bundle config path vendor/bundle
           bundle install --jobs 4 --retry 3
+     - name: Build yard docs
+       run: |
+          bundle exec rake yard
      - name: Publish docs
        uses: JamesIves/github-pages-deploy-action@3.7.1
        with:
